--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p><b>Description: </b> High-performance laptop with the latest processor and ample storage.</p>
                 <p><b>Price: </b>$999.99</p>
                 <p><b>Availability: </b>In Stock</p>
-                <img src="/HTML/ProductCatalog/images/laptop.png" alt="laptop  image" width="100px">
+                <img src="images/laptop.png" alt="laptop image" width="100px">
                 <br>
                 <a href="abcd.com">view details</a>
                 <ul>
@@ -38,7 +38,7 @@
                 <p><b>Description: </b> Feature-rich smartphone with a high-resolution display and advanced camera.</p>
                 <p><b>Price: </b>$699.99</p>
                 <p><b>Availability: </b>Out of stock</p>
-                <img src="/HTML/ProductCatalog/images/smartphone.png" alt="smartphone  image" width="100px">
+                <img src="images/smartphone.png" alt="smartphone image" width="100px">
                 <br>
                 <a href="abcd.com">view details</a>
                 <ul>
@@ -56,7 +56,7 @@
                 <p><b>Description: </b> Casual and comfortable t-shirt made from premium quality cotton.</p>
                 <p><b>Price: </b>$19.99</p>
                 <p><b>Availability: </b>In Stock</p>
-                <img src="/HTML/ProductCatalog/images/shirt.png" alt="shirt pic" width="100px">
+                <img src="images/shirt.png" alt="shirt pic" width="100px">
                 <br>
                 <a href="abcd.com">view details</a>
                 <ul>
@@ -71,7 +71,7 @@
                 <p><b>Description: </b> Classic jeans with a slim fit and stylish design.</p>
                 <p><b>Price: </b>$49.99</p>
                 <p><b>Availability: </b>In Stock</p>
-                <img src="/HTML/ProductCatalog/images/jeans.png" alt="jeans pic" width="100px">
+                <img src="images/jeans.png" alt="jeans pic" width="100px">
                 <br>
                 <a href="abcd.com">view details</a>
                 <ul>
@@ -89,7 +89,7 @@
                 <p><b>Description: </b> Modern and stylish table lamp to enhance your home decor.</p>
                 <p><b>Price: </b>$39.99</p>
                 <p><b>Availability: </b>In Stock</p>
-                <img src="/HTML/ProductCatalog/images/lamp.png" alt="lamp pic" width="100px">
+                <img src="images/lamp.png" alt="lamp pic" width="100px">
                 <br>
                 <a href="abcd.com">view details</a>
                 <ul>
@@ -104,7 +104,7 @@
                 <p><b>Description: </b> Soft and comfortable throw pillow for your living room or bedroom.</p>
                 <p><b>Price: </b>$24.99</p>
                 <p><b>Availability: </b>In Stock</p>
-                <img src="/HTML/ProductCatalog/images/pillow.png" alt="pillow pic" width="100px">
+                <img src="images/pillow.png" alt="pillow pic" width="100px">
                 <br>
                 <a href="abcd.com">view details</a>
                 <ul>
